src/objects/c2g__codaIntercompanyTransfer__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpintercompanytransfer</customHelpPage>
    <description>An intermediate staging object used during the intercompany journal process.</description>
    <fields>
        <fullName>c2g__CanceledIntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Canceled Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Canceling Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Cash Entry Number</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Cash Entry)</relationshipLabel>
        <relationshipName>IntercompanyTransfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipName>Intercompany_Staging1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentBankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Document Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Document Bank Account)</relationshipLabel>
        <relationshipName>IntercompanyTransfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Document Currency)</relationshipLabel>
        <relationshipName>DestinationIntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentPaymentMethod__c</fullName>
        <label>Destination Document Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentPeriod__c</fullName>
        <formula>IF( ISBLANK( c2g__DestinationCashEntry__c ), &apos;&apos;, c2g__DestinationCashEntry__r.c2g__Period__r.Name)</formula>
        <label>Destination Document Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentTotal__c</fullName>
        <formula>IF( ISBLANK( c2g__DestinationPayableInvoice__c ), c2g__DestinationPayableCreditNote__r.c2g__CreditNoteTotal__c, c2g__DestinationPayableInvoice__r.c2g__InvoiceTotal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentType__c</fullName>
        <label>Destination Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationJournalDate__c</fullName>
        <formula>IF( ISBLANK( c2g__DestinationPayableInvoice__c ), IF( ISBLANK( c2g__DestinationPayableCreditNote__c ), IF( ISBLANK(c2g__DestinationCashEntry__c), c2g__DestinationJournal__r.c2g__JournalDate__c, c2g__DestinationCashEntry__r.c2g__Date__c ), c2g__DestinationPayableCreditNote__r.c2g__CreditNoteDate__c ), c2g__DestinationPayableInvoice__r.c2g__InvoiceDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationJournalDescription__c</fullName>
        <label>Destination Document Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationJournalReference__c</fullName>
        <formula>IF(ISBLANK( c2g__DestinationCashEntry__c ), IF( ISBLANK( c2g__DestinationPayableInvoice__c ), IF( ISBLANK( c2g__DestinationPayableCreditNote__c ), c2g__DestinationJournal__r.c2g__Reference__c, c2g__DestinationPayableCreditNote__r.c2g__Reference1__c &amp; IF(ISBLANK(c2g__DestinationPayableCreditNote__r.c2g__Reference1__c) || ISBLANK(c2g__DestinationPayableCreditNote__r.c2g__Reference2__c), &apos;&apos;, &apos;, &apos;) &amp; c2g__DestinationPayableCreditNote__r.c2g__Reference2__c ), c2g__DestinationPayableInvoice__r.c2g__Reference1__c &amp; IF(ISBLANK(c2g__DestinationPayableInvoice__r.c2g__Reference1__c) || ISBLANK(c2g__DestinationPayableInvoice__r.c2g__Reference2__c), &apos;&apos;, &apos;, &apos;) &amp; c2g__DestinationPayableInvoice__r.c2g__Reference2__c ), c2g__SourceCashEntry__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Document Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Journal)</relationshipLabel>
        <relationshipName>Intercompany_Staging1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationPayableCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Payable Credit Note Number</label>
        <referenceTo>c2g__codaPurchaseCreditNote__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationPayableInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Payable Invoice Number</label>
        <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__ProcessingMessages__c</fullName>
        <label>Processing Messages</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessingStatus__c</fullName>
        <label>Processing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__RejectReason__c</fullName>
        <label>Reason for Rejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SourceCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Cash Entry Number</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Cash Entry)</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Company)</relationshipLabel>
        <relationshipName>Intercompany_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentBankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Document Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Document Bank Account)</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfersSource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentName__c</fullName>
        <formula>IF( ISBLANK( c2g__SourceSalesInvoice__c ), IF( ISBLANK( c2g__SourceSalesCreditNote__c ), IF( ISBLANK( c2g__SourceCashEntry__c ), c2g__SourceJournal__r.Name, c2g__SourceCashEntry__r.Name), c2g__SourceSalesCreditNote__r.Name ), c2g__SourceSalesInvoice__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentPeriod__c</fullName>
        <formula>IF( ISBLANK( c2g__SourceCashEntry__c ), &apos;&apos;, c2g__SourceCashEntry__r.c2g__Period__r.Name)</formula>
        <label>Source Document Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentReference__c</fullName>
        <label>Source Document Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentTotal__c</fullName>
        <formula>IF( ISBLANK( c2g__SourceSalesInvoice__c ), c2g__SourceSalesCreditNote__r.c2g__CreditNoteTotal__c, c2g__SourceSalesInvoice__r.c2g__InvoiceTotal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentType__c</fullName>
        <label>Source Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__SourceJournalDate__c</fullName>
        <formula>IF( ISBLANK( c2g__SourceSalesInvoice__c ), IF( ISBLANK( c2g__SourceSalesCreditNote__c ), IF( ISBLANK( c2g__SourceJournal__c ), c2g__SourceCashEntry__r.c2g__Date__c, c2g__SourceJournal__r.c2g__JournalDate__c ), c2g__SourceSalesCreditNote__r.c2g__CreditNoteDate__c ), c2g__SourceSalesInvoice__r.c2g__InvoiceDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__SourceJournalDescription__c</fullName>
        <label>Source Document Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SourceJournalReference__c</fullName>
        <formula>IF( ISBLANK( c2g__SourceSalesInvoice__c ), IF( ISBLANK( c2g__SourceSalesCreditNote__c ),  c2g__SourceJournal__r.c2g__Reference__c, c2g__SourceSalesCreditNote__r.c2g__CustomerReference__c ),  c2g__SourceSalesInvoice__r.c2g__CustomerReference__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEPRECATED: Source Document Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SourceJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Journal)</relationshipLabel>
        <relationshipName>Intercompany_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceSalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Sales Credit Note Number</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceSalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Sales Invoice Number</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Intercompany Transfer</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__Available</fullName>
        <columns>NAME</columns>
        <columns>c2g__SourceCompany__c</columns>
        <columns>c2g__SourceJournal__c</columns>
        <columns>c2g__SourceSalesInvoice__c</columns>
        <columns>c2g__SourceSalesCreditNote__c</columns>
        <columns>c2g__SourceCashEntry__c</columns>
        <columns>c2g__SourceJournalDescription__c</columns>
        <columns>c2g__DestinationCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>Available</label>
    </listViews>
    <listViews>
        <fullName>c2g__Complete</fullName>
        <columns>NAME</columns>
        <columns>c2g__SourceCompany__c</columns>
        <columns>c2g__SourceJournal__c</columns>
        <columns>c2g__SourceJournalDescription__c</columns>
        <columns>c2g__DestinationCompany__c</columns>
        <columns>c2g__ProcessingMessages__c</columns>
        <columns>c2g__ProcessingStatus__c</columns>
        <columns>c2g__DestinationJournal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Complete</label>
    </listViews>
    <listViews>
        <fullName>c2g__CompleteIntercompanyCashEntries</fullName>
        <columns>NAME</columns>
        <columns>c2g__SourceCompany__c</columns>
        <columns>c2g__SourceCashEntry__c</columns>
        <columns>c2g__SourceJournalDescription__c</columns>
        <columns>c2g__DestinationCompany__c</columns>
        <columns>c2g__DestinationCashEntry__c</columns>
        <columns>c2g__ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>c2g__codaIntercompanyTransfer__c.c2g__IntercompanyCashEntries</value>
        </filters>
        <label>Complete Intercompany Cash Entries</label>
    </listViews>
    <listViews>
        <fullName>c2g__CompleteIntercompanyJournals</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>c2g__SourceCompany__c</columns>
        <columns>c2g__SourceJournal__c</columns>
        <columns>c2g__SourceJournalDescription__c</columns>
        <columns>c2g__DestinationCompany__c</columns>
        <columns>c2g__DestinationJournal__c</columns>
        <columns>c2g__ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>c2g__codaIntercompanyTransfer__c.c2g__IntercompanyJournals</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>c2g__codaIntercompanyTransfer__c.c2g__IntercompanyCancelingJournals</value>
        </filters>
        <label>Complete Intercompany Journals</label>
    </listViews>
    <listViews>
        <fullName>c2g__CompleteIntercompanySalesCreditNotes</fullName>
        <columns>NAME</columns>
        <columns>c2g__SourceCompany__c</columns>
        <columns>c2g__SourceSalesCreditNote__c</columns>
        <columns>c2g__SourceJournalDescription__c</columns>
        <columns>c2g__DestinationCompany__c</columns>
        <columns>c2g__DestinationPayableCreditNote__c</columns>
        <columns>c2g__ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>c2g__codaIntercompanyTransfer__c.c2g__IntercompanySalesCredit</value>
        </filters>
        <label>Complete Intercompany Sales Credit Notes</label>
    </listViews>
    <listViews>
        <fullName>c2g__CompleteIntercompanySalesInvoices</fullName>
        <columns>NAME</columns>
        <columns>c2g__SourceCompany__c</columns>
        <columns>c2g__SourceSalesInvoice__c</columns>
        <columns>c2g__SourceJournalDescription__c</columns>
        <columns>c2g__DestinationCompany__c</columns>
        <columns>c2g__DestinationPayableInvoice__c</columns>
        <columns>c2g__ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>c2g__codaIntercompanyTransfer__c.c2g__IntercompanySales</value>
        </filters>
        <label>Complete Intercompany Sales Invoices</label>
    </listViews>
    <listViews>
        <fullName>c2g__Error</fullName>
        <columns>NAME</columns>
        <columns>c2g__SourceCompany__c</columns>
        <columns>c2g__SourceJournal__c</columns>
        <columns>c2g__SourceSalesInvoice__c</columns>
        <columns>c2g__SourceSalesCreditNote__c</columns>
        <columns>c2g__SourceCashEntry__c</columns>
        <columns>c2g__SourceJournalDescription__c</columns>
        <columns>c2g__DestinationCompany__c</columns>
        <columns>c2g__ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Error</label>
    </listViews>
    <listViews>
        <fullName>c2g__Rejected</fullName>
        <columns>NAME</columns>
        <columns>c2g__SourceCompany__c</columns>
        <columns>c2g__SourceJournal__c</columns>
        <columns>c2g__SourceSalesInvoice__c</columns>
        <columns>c2g__SourceSalesCreditNote__c</columns>
        <columns>c2g__SourceCashEntry__c</columns>
        <columns>c2g__SourceJournalDescription__c</columns>
        <columns>c2g__DestinationCompany__c</columns>
        <columns>c2g__ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ICT{000000}</displayFormat>
        <label>Intercompany Transfer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intercompany Transfers</pluralLabel>
    <recordTypes>
        <fullName>c2g__IntercompanyCancelingJournals</fullName>
        <active>true</active>
        <description>The source document is a canceling journal. This option provides access to the intercompany transfer canceling journal page layout.</description>
        <label>Intercompany Canceling Journals</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanyCashEntries</fullName>
        <active>true</active>
        <description>The source document is a cash entry. This option provides access to the inter company transfer cash entry page layout.</description>
        <label>Intercompany Cash Entries</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanyJournals</fullName>
        <active>true</active>
        <description>The source document is a journal. This option provides access to the inter company transfer journal page layout.</description>
        <label>Intercompany Journals</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanySales</fullName>
        <active>true</active>
        <description>The source document is a sales invoice. This option provides access to the inter company transfer sales invoice page layout.</description>
        <label>Intercompany Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanySalesCredit</fullName>
        <active>true</active>
        <description>The source document is a sales credit note. This option provides access to the inter company transfer sales credit note page layout.</description>
        <label>Intercompany Sales Credit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>